catkin_ws/logs/iq_gnc/build.make.041.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_pos_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:26:18: error: expected primary-expression before ‘>’ token
   26 |  if ((currPos_z =>0 && currPos_z <= 0.1) && drone1_z > 0.1 ) {
      |                  ^
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1949: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
